--- a/charts/event-processing-pipeline/Chart.yaml
+++ b/charts/event-processing-pipeline/Chart.yaml
@@ -3,5 +3,5 @@ name: event-processing-pipeline
 description: A Helm chart for Event Processing Pipeline
 
 type: application
-version: 0.0.1-alpha.1
+version: 0.0.1-beta.1
 appVersion: "2.0.1"
