--- a/charts/event-processing-pipeline/values.yaml
+++ b/charts/event-processing-pipeline/values.yaml
@@ -3,7 +3,6 @@ streams: []
 # Values possible for Event Processing Pipelines
 defaults:
   debugLevel: INFO
-  clientId: epp
   domain: teknoir.cloud
 
   image:
@@ -23,6 +22,10 @@ defaults:
       memory: 128Mi
 
   serviceAccountName: default
+
+  instructor:
+    model: "gemini-2.5-flash"
+    prompt: "Describe the following scene in detail, including objects, actions, environment, and any notable features."
 
   mqtt:
     # MQTT broker
