--- a/charts/event-processing-pipeline/values.yaml
+++ b/charts/event-processing-pipeline/values.yaml
@@ -7,7 +7,7 @@ defaults:
 
   image:
     repository: us-docker.pkg.dev/teknoir/gcr.io/observatory-event-processing
-    tag: feature-line-crossing-cloud-stream-6afbeda
+    tag: feature-line-crossing-cloud-stream-2aaf66b
 
   # Application identification
   appName: event-processing-pipeline-app
@@ -48,3 +48,10 @@ defaults:
   mongodbSecretKeyRef:
     name: mongodb-credentials
     key: service_uri
+
+  reIdMatchingService:
+    url: http://reid-matching-service:80
+
+  reIdMongodbSecretKeyRef:
+    name: re-id-mongo
+    key: uri
