--- a/charts/event-processing-pipeline/values.yaml
+++ b/charts/event-processing-pipeline/values.yaml
@@ -45,6 +45,7 @@ defaults:
     key: service_uri
 
   reId:
+    disableMatching: false
     matchingServiceURL: http://matching-service/match
     visualAttrPromptName: reid-visual-attributes
     visualAttrResponseModel: reid_visual_attribute_classifier
